# CIFAR10_TEST_TASK

./: .gitattributes  .gitignore  Dockerfile  README.md  [01]AI_Train.ipynb  compose.yaml  pyproject.toml
app/: main.py  model_loader.py  schemas.py
models/: cifar_reznet_9395.pth  cifar_reznet_9396.pth  cifar_reznet_best.pth  cifar_reznet_best_new.pth  cifar_reznet_last.pth
