[project]
name = "ai-test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey Leonovich",email = "put_theport@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11, <3.15"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "torchvision (>=0.24.0,<0.25.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "torch (>=2.9.0,<3.0.0)",
    "torchaudio (>=2.9.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"


]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-cu130"}
torchaudio = {source = "pytorch-cu130"}
